# equirectangular_to_multi_perspective_generator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml
src/: main.py
